welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: ')' expected but ',' found.
	for (i <- in a,b,c,d){
                      ^countTeen:9: error: illegal start of simple expression
}
^