welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
var nbAdo = 0
	for (i <- in a,b,c,d){
		if ((i<=19) && (13<=i)){
			nbAdo = nbAdo +1	
		}
	}
	return nbAdo
}
